--- a/HTML5手机上下翻动/css/word.css
+++ b/HTML5手机上下翻动/css/word.css
@@ -241,7 +241,7 @@ p{
 }
 .performance{
 	font-size: 30px;
-	width: 254px;
+	width: 247px;
 	margin-left: auto;
 	margin-right: auto;
 	font-family:'chenwixun-jiana5d6efaf118ead';
@@ -375,7 +375,7 @@ p{
 	}
 }
 .achieve{
-	font-size: 66px;
+	font-size: 5em;
 	font-family:'zsxsbainianjnbaf3b214a118ead';
 	width: 240px;
 	height: 50px;
@@ -419,7 +419,7 @@ p{
 	}
 }
 .ach{
-	font-size: 35px;
+	font-size: 32px;
 	width: 220px;
 	/*background: green;*/
 	/*margin-top: 4px;*/
