--- a/HTML5手机上下翻动/css/word.css
+++ b/HTML5手机上下翻动/css/word.css
@@ -30,7 +30,7 @@ p{
 	/*background: red;*/
 	animation:wr 0.5s linear ;  
 }
-@keyframes pr{
+@-webkit-keyframes pr{
 	0%{
 		-webkit-transform:  translate(300px,-1500px)  rotate(-90deg);
 		transform:  translate(300px,-1500px)  rotate(-90deg);
@@ -48,7 +48,7 @@ p{
 	}
 
 }
-@keyframes wr{
+@-webkit-keyframes wr{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		transform: translate(-1000px,0px);
@@ -85,7 +85,7 @@ p{
 	font-size: 0.5em;
 	color: black;
 }
-@keyframes first{
+@-webkit-keyframes first{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		transform: translate(-1000px,0px);
@@ -97,7 +97,7 @@ p{
 		-moz-transform: translate(0px,0px);
 	}
 }
-@keyframes name{
+@-webkit-keyframes name{
 	0%{
 		-webkit-transform: translate(1000px,0px);
 		transform: translate(1000px,0px);
@@ -126,7 +126,7 @@ p{
 .joke{
 	animation:joke 2.8s ease-out; 
 }
-@keyframes and-then{
+@-webkit-keyframes and-then{
 	0%{
 		-webkit-transform: translate(1000px,0px);
 		-moz-transform: translate(1000px,0px);
@@ -136,7 +136,7 @@ p{
 		-moz-transform: translate(0px,0px);
 	}
 }
-@keyframes joke{
+@-webkit-keyframes joke{
 	0%{
 		-webkit-transform: translate(1000px,0px);
 		-moz-transform: translate(1000px,0px);
@@ -152,7 +152,7 @@ p{
 .patient{
 	animation:patient 3.8s ease-out; 
 }
-@keyframes what{
+@-webkit-keyframes what{
 	0%{
 		-webkit-transform: translate(1000px,0px);
 		-moz-transform: translate(1000px,0px);
@@ -162,7 +162,7 @@ p{
 		-moz-transform: translate(0px,0px);
 	}
 }
-@keyframes patient{
+@-webkit-keyframes patient{
 	0%{
 		-webkit-transform: translate(1000px,0px);
 		-moz-transform: translate(1000px,0px);
@@ -185,7 +185,7 @@ p{
 	animation:introduce 1.5s linear; 
 	/*font-weight: bold;*/
 }
-@keyframes introduce{
+@-webkit-keyframes introduce{
 	0%{
 		-webkit-transform: rotate3d(100,0,0,90deg);
 		-moz-transform: rotate3d(100,0,0,90deg);
@@ -204,7 +204,7 @@ p{
 	font-weight: bold;
 	animation:aboutMe 1.5s linear; 
 }
-@keyframes aboutMe{
+@-webkit-keyframes aboutMe{
 	0%{
 		-webkit-transform: rotate3d(0,100,0,90deg);
 		-moz-transform: rotate3d(0,100,0,90deg);
@@ -225,7 +225,7 @@ p{
 	animation:me 1.5s linear; 
 	perspective:500px;
 }
-@keyframes me{
+@-webkit-keyframes me{
 	0%{
 		-webkit-transform: rotate3d(100,0,0,90deg);
 		-moz-transform: rotate3d(100,0,0,90deg);
@@ -245,7 +245,7 @@ p{
 	font-family:'jin_mei_mxplzxa5d7721ac18ead';
 	animation:school 1s linear; 
 }
-@keyframes school{
+@-webkit-keyframes school{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		-moz-transform: translate(-1000px,0px);
@@ -272,7 +272,7 @@ p{
 	font-weight: bold;
 	animation:performance 1s linear; 
 }
-@keyframes performance{
+@-webkit-keyframes performance{
 	0%{
 		-webkit-transform: translate(1000px,0px);
 		-moz-transform: translate(1000px,0px);
@@ -301,7 +301,7 @@ p{
 	animation:schoolLife 2s linear; 
 	perspective:500px;
 }
-@keyframes schoolLife{
+@-webkit-keyframes schoolLife{
 	0%{
 		-webkit-transform: rotate3d(0,100,0,90deg);
 		-moz-transform: rotate3d(0,100,0,90deg);
@@ -326,7 +326,7 @@ p{
 	font-weight: bold;
 	animation:intere 1s ease-out; 
 }
-@keyframes then{
+@-webkit-keyframes then{
 	0%{
 		-webkit-transform: rotate(-90deg);
 		-moz-transform: rotate(-90deg);
@@ -351,7 +351,7 @@ p{
 	margin-top: 10px;
 	animation:such 1s linear; 
 }
-@keyframes such{
+@-webkit-keyframes such{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		-moz-transform: translate(-1000px,0px);
@@ -367,7 +367,7 @@ p{
 	animation:intere 7s ease-out; 
 	transform-origin: left;
 }
-@keyframes above{
+@-webkit-keyframes above{
 	0%{
 		-webkit-transform: scale(0,0);
 		-moz-transform: scale(0,0);
@@ -383,7 +383,7 @@ p{
 	animation:like 1s ease-out; 
 	transform-origin: left top;
 }
-@keyframes like{
+@-webkit-keyframes like{
 	0%{
 		-webkit-transform: rotate(90deg);
 		-moz-transform: rotate(90deg);
@@ -403,7 +403,7 @@ p{
 	animation:then 1s ease-out; 
 	transform-origin: left top;
 }
-@keyframes intere{
+@-webkit-keyframes intere{
 	0%{
 		-webkit-transform: rotate(90deg);
 		-moz-transform: rotate(90deg);
@@ -428,7 +428,7 @@ p{
 	/*background: red;*/
 	animation:achieve 1.1s ease-out; 
 }
-@keyframes ach{
+@-webkit-keyframes ach{
 	0%{
 		-webkit-transform: scale(0,0) rotate(180deg);
 		-moz-transform: scale(0,0) rotate(180deg);
@@ -442,7 +442,7 @@ p{
 		-moz-transform: scale(1,1) rotate(0deg);
 	}	
 }
-@keyframes achieve{
+@-webkit-keyframes achieve{
 	0%{
 		-webkit-transform: translate(0px,-1000px);
 		transform: translate(0px,-1000px);
@@ -508,7 +508,7 @@ p{
 .scholarship{
 	animation:scholarship 4s ease-out;
 }
-@keyframes scholarship{
+@-webkit-keyframes scholarship{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		-moz-transform: translate(-1000px,0px);
@@ -523,7 +523,7 @@ p{
 	}
 	
 }
-@keyframes model{
+@-webkit-keyframes model{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		-moz-transform: translate(-1000px,0px);
@@ -537,7 +537,7 @@ p{
 		-moz-transform: translate(0px,0px);
 	}
 }
-@keyframes blog{
+@-webkit-keyframes blog{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		-moz-transform: translate(-1000px,0px);
@@ -551,7 +551,7 @@ p{
 		-moz-transform: translate(0px,0px);
 	}
 }
-@keyframes reward{
+@-webkit-keyframes reward{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		-moz-transform: translate(-1000px,0px);
@@ -565,7 +565,7 @@ p{
 		-moz-transform: translate(0px,0px);
 	}
 }
-@keyframes ss{
+@-webkit-keyframes ss{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		-moz-transform: translate(-1000px,0px);
@@ -609,7 +609,7 @@ p{
 	line-height: 50px;
 	-moz-transform: rotate(-10deg);
 }
-@keyframes okay{
+@-webkit-keyframes okay{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		-moz-transform: translate(-1000px,0px);
@@ -637,7 +637,7 @@ p{
 	-webkit-transform: rotate(10deg);
 	-moz-transform: rotate(10deg);
 }
-@keyframes flower{
+@-webkit-keyframes flower{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		-webkit-transform: translate(-1000px,0px);
@@ -662,7 +662,7 @@ p{
 	-webkit-transform: rotate(-13deg);
 	-moz-transform: rotate(-13deg);
 }
-@keyframes attention{
+@-webkit-keyframes attention{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		transform-origin: left;
@@ -684,7 +684,7 @@ p{
 	-webkit-transform: rotate(4deg);
 	-moz-transform: rotate(4deg);
 }
-@keyframes goON{
+@-webkit-keyframes goON{
 	0%{
 		-webkit-transform: translate(-1000px,0px);
 		transform-origin: left;
@@ -716,7 +716,7 @@ p{
 	animation:noSuit 2s ease;
 	transform-origin: left top; 
 }
-@keyframes think{
+@-webkit-keyframes think{
 	0%{
 		transform: rotate(-90deg);
 	}
@@ -724,7 +724,7 @@ p{
 		transform: rotate(0deg);
 	}
 }
-@keyframes thing{
+@-webkit-keyframes thing{
 	0%{
 		transform:  rotate(-90deg);
 	}
@@ -732,7 +732,7 @@ p{
 		transform:  rotate(0deg);
 	}
 }
-@keyframes noSuit{
+@-webkit-keyframes noSuit{
 	0%{
 		transform:  rotate(-90deg);
 	}
@@ -757,7 +757,7 @@ p{
 .publish{
 	animation:publish 2s linear;
 }
-@keyframes truth{
+@-webkit-keyframes truth{
 	0%{
 		transform: scale(5,5);
 	}
@@ -768,7 +768,7 @@ p{
 		transform: scale(1,1);
 	}
 }
-@keyframes lie{
+@-webkit-keyframes lie{
 	0%{
 		transform: scale(5,5);
 	}
@@ -779,7 +779,7 @@ p{
 		transform:  scale(1,1);
 	}
 }
-@keyframes publish{
+@-webkit-keyframes publish{
 	0%{
 		transform:  scale(5,5);
 	}
