--- a/HTML5手机上下翻动/css/word.css
+++ b/HTML5手机上下翻动/css/word.css
@@ -78,7 +78,7 @@ p{
 	float: right;
 	margin-top: 50px;
 	padding-right: 10px;
-	animation:name 1s linear; 
+	animation:first 0.8s linear; 
 	color:rgb(40, 40, 40);
 }
 .name-span{
