--- a/HTML5手机上下翻动/css/word.css
+++ b/HTML5手机上下翻动/css/word.css
@@ -32,17 +32,20 @@ p{
 }
 @-webkit-keyframes pr{
 	0%{
-		-webkit-transform:  translate(300px,-1500px)  rotate(-90deg);
+		-webkit-transform:  translate(300px,-1500px);
+		-webkit-transform:  rotate(-90deg);
 		transform:  translate(300px,-1500px)  rotate(-90deg);
 		-moz-transform:  translate(300px,-1500px)  rotate(-90deg);
 	}
 	50%{
-		-webkit-transform: rotate(-90deg) translate(300px,-1500px);
+		-webkit-transform: rotate(-90deg);
+		-webkit-transform: translate(300px,-1500px);
 		transform: rotate(-90deg) translate(300px,-1500px);
 		-moz-transform: rotate(-90deg) translate(300px,-1500px);
 	}
 	100%{
-		-webkit-transform: rotate(0deg) translate(0px,0px) ;
+		-webkit-transform: translate(0px,0px) ;
+		-webkit-transform: rotate(0deg);
 		transform: rotate(0deg) translate(0px,0px) ;
 		-moz-transform: rotate(0deg) translate(0px,0px) ;
 	}
@@ -150,7 +153,7 @@ p{
 	animation:what 1.8s ease-out; 
 }
 .patient{
-	animation:patient 3.8s ease-out; 
+	animation:what 3.8s ease-out; 
 }
 @-webkit-keyframes what{
 	0%{
