--- a/HTML5手机上下翻动/css/word.css
+++ b/HTML5手机上下翻动/css/word.css
@@ -246,7 +246,7 @@ p{
 	margin-right: auto;
 	margin-top: 230px;
 	font-family:'jin_mei_mxplzxa5d7721ac18ead';
-	animation:school 1s linear; 
+	animation:and-then 1s linear; 
 }
 @-webkit-keyframes school{
 	0%{
