--- a/HTML5手机上下翻动/css/word.css
+++ b/HTML5手机上下翻动/css/word.css
@@ -336,16 +336,16 @@ p{
 	font-weight: bold;
 	font-size: 30px;
 	margin-top: 10px;
-	animation:and-then 1s linear; 
+	animation:such 1s ease-out; 
 }
 @-webkit-keyframes such{
 	0%{
-		-webkit-transform: translate(-1000px,0px);
-		-moz-transform: translate(-1000px,0px);
+		-webkit-transform: scale(0,0);
+		-moz-transform: scale(0,0);
 	}
 	100%{
-		-webkit-transform: translate(0px,0px);
-		-moz-transform: translate(0px,0px);
+		-webkit-transform: scale(1,1);
+		-moz-transform: scale(1,1);
 	}
 }
 .above{
