--- a/HTML5手机上下翻动/css/word.css
+++ b/HTML5手机上下翻动/css/word.css
@@ -407,7 +407,7 @@ p{
 	margin-right: auto;
 	margin-top: 230px;
 	/*background: red;*/
-	animation:achieve 1.5s linear; 
+	animation:achieve 1.6s linear; 
 }
 @-webkit-keyframes ach{
 	0%{
@@ -442,7 +442,7 @@ p{
 	margin-right: auto;
 	font-family:'chenwixun-jianaf3a8d1e718ead';
 	font-weight: bold;
-	animation:ach 1.8s ease-out; 
+	animation:ach 1.6s linear; 
 }
 .got{
 	width: 480px;
